compiler/flux-parser/src/grammar/snapshots/flux_parser__grammar__expr__tests__parse_basic_literals_b8_int_neg_sep.snap
---
source: flux-parser/src/grammar/expr.rs
expression: "&parse.debug_tree()"
---
PrefixExpr@0..12
  Minus@0..1 "-"
  IntExpr@1..12
    IntExpr@1..12 "081_234_567"
