compiler/flux-parser/src/grammar/snapshots/flux_parser__grammar__expr__tests__parse_basic_literals_float.snap
---
source: compiler/flux-parser/src/grammar/expr.rs
expression: parse.to_string()
---
FloatExpr@0..3
  FloatExpr@0..3 "1.0"
