compiler/flux-parser/src/grammar/snapshots/flux_parser__grammar__expr__tests__parse_basic_literals_float_neg.snap
---
source: flux-parser/src/grammar/expr.rs
expression: "&parse.debug_tree()"
---
PrefixExpr@0..4
  Minus@0..1 "-"
  FloatExpr@1..4
    FloatExpr@1..4 "1.0"
