compiler/flux-parser/src/grammar/snapshots/flux_parser__grammar__expr__tests__parse_basic_literals_float_neg_sep.snap
---
source: compiler/flux-parser/src/grammar/expr.rs
expression: parse.to_string()
---
PrefixExpr@0..8
  Minus@0..1 "-"
  FloatExpr@1..8
    FloatExpr@1..8 "1.0_000"
