compiler/flux-parser/src/grammar/snapshots/flux_parser__grammar__expr__tests__parse_binops_cmp_ne.snap
---
source: compiler/flux-parser/src/grammar/expr.rs
expression: parse.to_string()
---
BinExpr@0..4
  IntExpr@0..1
    IntExpr@0..1 "1"
  CmpNeq@1..3 "!="
  IntExpr@3..4
    IntExpr@3..4 "1"
